fix blurry font caused by font weight property
Given that the used font "Press Start 2P" only comes at a 400 font weight, the default styling of headings using a weight at 800 makes those elements to lock blurry

--- a/styles/reset.css
+++ b/styles/reset.css
@@ -15,7 +15,7 @@ h2,
 h3,
 h4 {
   text-wrap: balance;
-  font-weight: 800;
+  font-weight: 400;
 }
 
 p {
