--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,6 @@
 html {
   font-family: "Press Start 2P", system-ui;
+  font-weight: 400;
 }
 
 main,
